fix layout problem

--- a/scss/core/_layout.scss
+++ b/scss/core/_layout.scss
@@ -56,9 +56,6 @@ app-root {
     z-index: $zindex-sticky;
     width: 100%;
   }
-  .app-body {
-    margin-top: $navbar-height;
-  }
 }
 
 //
